<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/worktasks_bg"
    android:padding="15dp">
    
    <EditText
        android:id="@+id/oldPassView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:textColorHint="#d7cdcd"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#303030"
        android:background="@drawable/edittext_background" />
    
    <EditText
        android:id="@+id/newPassView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/new_password"
        android:textColorHint="#d7cdcd"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#303030"
        android:background="@drawable/edittext_background" />
    
    <EditText
        android:id="@+id/verifyNewPassView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/verify_new_password"
        android:textColorHint="#d7cdcd"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#303030"
        android:background="@drawable/edittext_background" />

</LinearLayout>
