<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/confirmation_dialog_background">
    
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/accept_task" />
    
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="#9b9e9e" />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	
	    <Button 
	        android:id="@+id/cancelBtn"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textColor="#878b8e"
	        android:text="@string/cancel"/>
	    
	    <View
		    android:layout_width="1dp"
		    android:layout_height="match_parent"
		    android:background="#9b9e9e" />
	    
	    <Button 
	        android:id="@+id/okBtn"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textColor="#1abf75"
	        android:text="@string/ok"/>
	    
	</LinearLayout>

</LinearLayout>
