<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:padding="1dp"
    android:background="@drawable/list_item_background">
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        
        <ImageView
            android:id="@+id/taskIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="15dp" />
        
        <TextView
            android:id="@+id/taskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/taskIcon"
            android:textSize="18sp"
            android:textColor="#303030"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/dueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/taskTitle"
            android:layout_toRightOf="@id/taskIcon"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/due_icon"
            android:drawablePadding="5dp"
            android:textColor="#878b8e"
            android:textSize="10sp" />
        
        <TextView
            android:id="@+id/durationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dueView"
            android:layout_alignBaseline="@id/dueView"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/duration_icon"
            android:drawablePadding="5dp"
            android:textColor="#878b8e"
            android:textSize="10sp" />
        
    </RelativeLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e6eae8" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#f9f9f9">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/photos_icon"
            android:drawablePadding="5dp"
            android:textColor="#878b8e"
            android:gravity="center"
            android:text="@string/photos" />
        
        <TextView 
            android:id="@+id/photosView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#1abf75" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/notes_icon"
            android:drawablePadding="5dp"
            android:textColor="#878b8e"
            android:gravity="center"
            android:text="@string/notes" />
        
        <TextView 
            android:id="@+id/notesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#1abf75" />
        
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        
        <TextView 
            android:id="@+id/mapBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/map_icon"
            android:drawablePadding="5dp"
            android:textColor="#878b8e"
            android:gravity="center"
            android:text="@string/map" />
        
    </LinearLayout>

</LinearLayout>
</FrameLayout>
